k8s/cluster-hot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service-hot
  namespace: default
  labels:
    app: backend-service
    cluster: hot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-service-hot
  template:
    metadata:
      labels:
        app: backend-service-hot
        cluster: hot
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: backend-service
          image: mukul1599/backend-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          # RESOURCES: Necessary for the HPA to calculate usage
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
